// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component renders correctly 1`] = `
<div
  class="MuiContainer-root Container MuiContainer-maxWidthXl"
>
  Content
</div>
`;

exports[`Container component renders with no overflow 1`] = `
<div
  class="MuiContainer-root Container Container--no-overflow MuiContainer-maxWidthXl"
>
  Content
</div>
`;
